--- a/demo/note.ipynb
+++ b/demo/note.ipynb
@@ -1,51 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting openai"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: There was an error checking the latest version of pip.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  Downloading openai-0.27.8-py3-none-any.whl (73 kB)\n",
-      "     ---------------------------------------- 73.6/73.6 kB 4.2 MB/s eta 0:00:00\n",
-      "Requirement already satisfied: aiohttp in c:\\users\\an373\\anaconda3\\lib\\site-packages (from openai) (3.8.1)\n",
-      "Requirement already satisfied: requests>=2.20 in c:\\users\\an373\\anaconda3\\lib\\site-packages (from openai) (2.27.1)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\an373\\anaconda3\\lib\\site-packages (from openai) (4.64.0)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\an373\\anaconda3\\lib\\site-packages (from requests>=2.20->openai) (1.26.9)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\an373\\anaconda3\\lib\\site-packages (from requests>=2.20->openai) (2021.10.8)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\an373\\anaconda3\\lib\\site-packages (from requests>=2.20->openai) (2.0.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\an373\\anaconda3\\lib\\site-packages (from requests>=2.20->openai) (3.3)\n",
-      "Requirement already satisfied: multidict<7.0,>=4.5 in c:\\users\\an373\\anaconda3\\lib\\site-packages (from aiohttp->openai) (5.1.0)\n",
-      "Requirement already satisfied: frozenlist>=1.1.1 in c:\\users\\an373\\anaconda3\\lib\\site-packages (from aiohttp->openai) (1.2.0)\n",
-      "Requirement already satisfied: attrs>=17.3.0 in c:\\users\\an373\\anaconda3\\lib\\site-packages (from aiohttp->openai) (21.4.0)\n",
-      "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in c:\\users\\an373\\anaconda3\\lib\\site-packages (from aiohttp->openai) (4.0.1)\n",
-      "Requirement already satisfied: yarl<2.0,>=1.0 in c:\\users\\an373\\anaconda3\\lib\\site-packages (from aiohttp->openai) (1.6.3)\n",
-      "Requirement already satisfied: aiosignal>=1.1.2 in c:\\users\\an373\\anaconda3\\lib\\site-packages (from aiohttp->openai) (1.2.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\an373\\anaconda3\\lib\\site-packages (from tqdm->openai) (0.4.4)\n",
-      "Requirement already satisfied: typing-extensions>=3.6.5 in c:\\users\\an373\\anaconda3\\lib\\site-packages (from async-timeout<5.0,>=4.0.0a3->aiohttp->openai) (4.1.1)\n",
-      "Installing collected packages: openai\n",
-      "Successfully installed openai-0.27.8\n"
-     ]
-    }
-   ],
+   "source": [
+    "# SetUp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import openai\n",
     "\n",
@@ -54,9 +20,40 @@
     "        api_key = file.readline().strip()  \n",
     "    return api_key\n",
     "\n",
-    "# Usage\n",
     "api_key = get_api_key('secret.txt')\n",
-    "print(api_key)  \n"
+    "model_id = \"gpt-4-32k\"\n",
+    "\n",
+    "openai.api_key = api_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_completion(prompt, model):\n",
+    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
+    "    response = openai.ChatCompletion.create(\n",
+    "        model=model,\n",
+    "        messages=messages,\n",
+    "        temperature=0, # this is the degree of randomness of the model's output\n",
+    "    )\n",
+    "    return response.choices[0].message[\"content\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prompting Principles\n",
+    "- **Principle 1: Write clear(clear != short) and specific instructions** \n",
+    "- **Principle 2: Give the model time to “think”**\n",
+    "\n",
+    "### Tactics\n",
+    "\n",
+    "#### Tactic 1: Use delimiters to clearly indicate distinct parts of the input\n",
+    "- Delimiters can be anything like: ```, \"\"\", < >, `<tag> </tag>`, `:`"
    ]
   }
  ],
