--- a/demo/note.ipynb
+++ b/demo/note.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,18 +21,18 @@
     "    return api_key\n",
     "\n",
     "api_key = get_api_key('secret.txt')\n",
-    "model_id = \"gpt-4-32k\"\n",
+    "model_id = \"gpt-3.5-turbo\"\n",
     "\n",
     "openai.api_key = api_key"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_completion(prompt, model):\n",
+    "def get_completion(prompt, model=model_id):\n",
     "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
     "    response = openai.ChatCompletion.create(\n",
     "        model=model,\n",
@@ -55,6 +55,48 @@
     "#### Tactic 1: Use delimiters to clearly indicate distinct parts of the input\n",
     "- Delimiters can be anything like: ```, \"\"\", < >, `<tag> </tag>`, `:`"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To guide a model towards the desired output and reduce the chances of irrelevant or incorrect responses, it is important to provide clear and specific instructions, which may require longer prompts for more clarity and context.\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = f\"\"\"\n",
+    "You should express what you want a model to do by \\ \n",
+    "providing instructions that are as clear and \\ \n",
+    "specific as you can possibly make them. \\ \n",
+    "This will guide the model towards the desired output, \\ \n",
+    "and reduce the chances of receiving irrelevant \\ \n",
+    "or incorrect responses. Don't confuse writing a \\ \n",
+    "clear prompt with writing a short prompt. \\ \n",
+    "In many cases, longer prompts provide more clarity \\ \n",
+    "and context for the model, which can lead to \\ \n",
+    "more detailed and relevant outputs.\n",
+    "\"\"\"\n",
+    "prompt = f\"\"\"\n",
+    "Summarize the text delimited by triple backticks \\ \n",
+    "into a single sentence.\n",
+    "```{text}```\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
