--- a/demo/note.ipynb
+++ b/demo/note.ipynb
@@ -285,6 +285,118 @@
     "response = get_completion(prompt)\n",
     "print(response)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Principle 2: Give the model time to “think” \n",
+    "\n",
+    "#### Tactic 1: Specify the steps required to complete a task"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completion for prompt 1:\n",
+      "Two siblings, Jack and Jill, go on a quest to fetch water from a hilltop well, but misfortune strikes as they both fall down the hill, yet they return home slightly battered but with their adventurous spirits undimmed.\n",
+      "\n",
+      "Deux frères et sœurs, Jack et Jill, partent en quête d'eau d'un puits au sommet d'une colline, mais ils tombent tous les deux et retournent chez eux légèrement meurtris mais avec leur esprit d'aventure intact. \n",
+      "Noms: Jack, Jill.\n",
+      "\n",
+      "{\n",
+      "\"french_summary\": \"Deux frères et sœurs, Jack et Jill, partent en quête d'eau d'un puits au sommet d'une colline, mais ils tombent tous les deux et retournent chez eux légèrement meurtris mais avec leur esprit d'aventure intact.\",\n",
+      "\"num_names\": 2\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = f\"\"\"\n",
+    "In a charming village, siblings Jack and Jill set out on \\ \n",
+    "a quest to fetch water from a hilltop \\ \n",
+    "well. As they climbed, singing joyfully, misfortune \\ \n",
+    "struck—Jack tripped on a stone and tumbled \\ \n",
+    "down the hill, with Jill following suit. \\ \n",
+    "Though slightly battered, the pair returned home to \\ \n",
+    "comforting embraces. Despite the mishap, \\ \n",
+    "their adventurous spirits remained undimmed, and they \\ \n",
+    "continued exploring with delight.\n",
+    "\"\"\"\n",
+    "# example 1\n",
+    "prompt_1 = f\"\"\"\n",
+    "Perform the following actions: \n",
+    "1 - Summarize the following text delimited by triple \\\n",
+    "backticks with 1 sentence.\n",
+    "2 - Translate the summary into French.\n",
+    "3 - List each name in the French summary.\n",
+    "4 - Output a json object that contains the following \\\n",
+    "keys: french_summary, num_names.\n",
+    "\n",
+    "Separate your answers with line breaks.\n",
+    "\n",
+    "Text:\n",
+    "```{text}```\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt_1)\n",
+    "print(\"Completion for prompt 1:\")\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ask for output in a specified format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Completion for prompt 2:\n",
+      "Summary: Jack and Jill go on a quest to fetch water, but misfortune strikes and they tumble down the hill, returning home slightly battered but with their adventurous spirits undimmed. \n",
+      "Translation: Jack et Jill partent en quête d'eau, mais la malchance frappe et ils dégringolent la colline, rentrant chez eux légèrement meurtris mais avec leurs esprits aventureux intacts.\n",
+      "Names: Jack, Jill\n",
+      "Output JSON: {\"french_summary\": \"Jack et Jill partent en quête d'eau, mais la malchance frappe et ils dégringolent la colline, rentrant chez eux légèrement meurtris mais avec leurs esprits aventureux intacts.\", \"num_names\": 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt_2 = f\"\"\"\n",
+    "Your task is to perform the following actions: \n",
+    "1 - Summarize the following text delimited by \n",
+    "  <> with 1 sentence.\n",
+    "2 - Translate the summary into French.\n",
+    "3 - List each name in the French summary.\n",
+    "4 - Output a json object that contains the \n",
+    "  following keys: french_summary, num_names.\n",
+    "\n",
+    "Use the following format:\n",
+    "Text: <text to summarize>\n",
+    "Summary: <summary>\n",
+    "Translation: <summary translation>\n",
+    "Names: <list of names in Italian summary>\n",
+    "Output JSON: <json with summary and num_names>\n",
+    "\n",
+    "Text: <{text}>\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt_2)\n",
+    "print(\"\\nCompletion for prompt 2:\")\n",
+    "print(response)"
+   ]
   }
  ],
  "metadata": {
